--- a/1M/1M-exercicesS1-P1.tex
+++ b/1M/1M-exercicesS1-P1.tex
@@ -23,6 +23,7 @@
 % Reduce space between section entries
 \setlength{\cftbeforesecskip}{2pt}
 
+\fancyfoot[C]{\thepage}
 % Reduce indentation for section entries
 \setlength{\cftsecindent}{1em}
 \begin{center}
@@ -36,273 +37,273 @@
 
 \section{Calcul numérique}
 
-%\insertexo{6z4t2}{true}{exo}{false}
-%\insertexo{1mcjb}{true}{exo}{false}
+%\insertexo{6z4t2}{true}{exo}
+%\insertexo{1mcjb}{true}{exo}
 %\subsection{Nombres premiers}
-%\insertexo{fttde}{true}{exo}{false}
-%\insertexo{b23hy}{true}{exo}{false}
-%\insertexo{11mx3}{true}{exo}{false}
-%\insertexo{4sun4}{true}{exo}{false}
+%\insertexo{fttde}{true}{exo}
+%\insertexo{b23hy}{true}{exo}
+%\insertexo{11mx3}{true}{exo}
+%\insertexo{4sun4}{true}{exo}
 \subsection{Division euclidienne}
-\insertexo{t3fxd}{true}{exo}{false}
-\insertexo{wv9bq}{true}{exo}{false}
-\insertexo{cc78t}{true}{exo}{false}
-\insertexo{vrjk9}{true}{exo}{false}
-\insertexo{nwgzm}{true}{exo}{false}
+\insertexo{t3fxd}{true}{exo}
+\insertexo{wv9bq}{true}{exo}
+\insertexo{cc78t}{true}{exo}
+\insertexo{vrjk9}{true}{exo}
+\insertexo{nwgzm}{true}{exo}
 
 \subsection{Nombres rationnels}
-\insertexo{vssbc}{true}{exo}{false}
-%\insertexo{jhavr}{true}{exo}{false}
-\insertexo{xgk9e}{true}{exo}{false}
+\insertexo{vssbc}{true}{exo}
+%\insertexo{jhavr}{true}{exo}
+\insertexo{xgk9e}{true}{exo}
 \subsection{Racines}
-\insertexo{hv2ug}{true}{exo}{false}
-\insertexo{ksh26}{true}{exo}{false}
-\insertexo{9f4t8}{true}{exo}{false}
-\insertexo{f3sg7}{true}{exo}{false}
-\insertexo{rp8cc}{true}{exo}{false}
+\insertexo{hv2ug}{true}{exo}
+\insertexo{ksh26}{true}{exo}
+\insertexo{9f4t8}{true}{exo}
+\insertexo{f3sg7}{true}{exo}
+\insertexo{rp8cc}{true}{exo}
 \section{Ensembles et intervalles}
 \subsection{Ensembles de nombres}
-\insertexo{cbh7d}{true}{exo}{false}
-\insertexo{w1wsu}{true}{exo}{false}
-\insertexo{nj317}{true}{exo}{false}
-\insertexo{j1x1v}{true}{exo}{false}
-\insertexo{hggjf}{true}{exo}{false}
-%\insertexo{yrfjs}{true}{exo}{false}
+\insertexo{cbh7d}{true}{exo}
+\insertexo{w1wsu}{true}{exo}
+\insertexo{nj317}{true}{exo}
+\insertexo{j1x1v}{true}{exo}
+\insertexo{hggjf}{true}{exo}
+%\insertexo{yrfjs}{true}{exo}
 \subsection{Ensembles quelconques}
 \insertexo{9bnc9}{false}{exo}
-\insertexo{k8f2j}{true}{exo}{false}
-\insertexo{tr635}{true}{exo}{false}
-\insertexo{krq84}{true}{exo}{false}
-\insertexo{ew4z2}{true}{exo}{false}
-\insertexo{rm8qy}{true}{exo}{false}
-\insertexo{zm8w4}{true}{exo}{false}
-\insertexo{s2efz}{true}{exo}{false}
-\insertexo{d5xp3}{true}{exo}{false}
+\insertexo{k8f2j}{true}{exo}
+\insertexo{tr635}{true}{exo}
+\insertexo{krq84}{true}{exo}
+\insertexo{ew4z2}{true}{exo}
+\insertexo{rm8qy}{true}{exo}
+\insertexo{zm8w4}{true}{exo}
+\insertexo{s2efz}{true}{exo}
+\insertexo{d5xp3}{true}{exo}
 \subsection{Intervalles réelles}
-\insertexo{6ugwm}{true}{exo}{false}
-\insertexo{v2rv8}{true}{exo}{false}
-\insertexo{p2cxv}{true}{exo}{false}
-\insertexo{p6w7q}{true}{exo}{false}
-\insertexo{czc9e}{true}{exo}{false}
-\insertexo{nw439}{true}{exo}{false}
-\insertexo{61ve6}{true}{exo}{false}
-\insertexo{fq51r}{true}{exo}{false}
-\insertexo{ht3h6}{true}{exo}{false}
-\insertexo{u14s6}{true}{exo}{false}
-\insertexo{9k125}{true}{exo}{false}
-\insertexo{mrvd7}{true}{exo}{false}
-\insertexo{drcdb}{true}{exo}{false}
+\insertexo{6ugwm}{true}{exo}
+\insertexo{v2rv8}{true}{exo}
+\insertexo{p2cxv}{true}{exo}
+\insertexo{p6w7q}{true}{exo}
+\insertexo{czc9e}{true}{exo}
+\insertexo{nw439}{true}{exo}
+\insertexo{61ve6}{true}{exo}
+\insertexo{fq51r}{true}{exo}
+\insertexo{ht3h6}{true}{exo}
+\insertexo{u14s6}{true}{exo}
+\insertexo{9k125}{true}{exo}
+\insertexo{mrvd7}{true}{exo}
+\insertexo{drcdb}{true}{exo}
 \section{Calul littéral}
 \subsection{Traduire un énoncé}
-\insertexo{3qa3k}{true}{exo}{false}
-\insertexo{a3tr3}{true}{exo}{false}
+\insertexo{3qa3k}{true}{exo}
+\insertexo{a3tr3}{true}{exo}
 \subsection{Isoler une variable}
-\insertexo{kdgn}{true}{exo}{false}
-\insertexo{n66ke}{true}{exo}{false}
-\insertexo{2yzxt}{true}{exo}{false}
+\insertexo{kdgn}{true}{exo}
+\insertexo{n66ke}{true}{exo}
+\insertexo{2yzxt}{true}{exo}
 
 \subsection{L'algèbre comme outil de preuve}
-\insertexo{sxya4}{true}{exo}{false}
-\insertexo{wanr}{true}{exo}{false}
-\insertexo{jxa81}{true}{exo}{false}
-\insertexo{u38hd}{true}{exo}{false}
-\insertexo{5xg9e}{true}{exo}{false}
-\insertexo{rdpye}{true}{exo}{false}
+\insertexo{sxya4}{true}{exo}
+\insertexo{wanr}{true}{exo}
+\insertexo{jxa81}{true}{exo}
+\insertexo{u38hd}{true}{exo}
+\insertexo{5xg9e}{true}{exo}
+\insertexo{rdpye}{true}{exo}
 \subsection{Développer et réduire}
-\insertexo{9e72h}{true}{exo}{false}
-\insertexo{jw3r4}{true}{exo}{false}
-\insertexo{1e54x}{true}{exo}{false}
-\insertexo{v4dqz}{true}{exo}{false}
-\insertexo{n86nn}{true}{exo}{false}
-\insertexo{akwq5}{true}{exo}{false}
-\insertexo{sj5q7}{true}{exo}{false}
-\insertexo{gw913}{true}{exo}{false}
-\insertexo{n9d51}{true}{exo}{false}
-\insertexo{nrg23}{true}{exo}{false}
-\insertexo{1kye7}{true}{exo}{false}
+\insertexo{9e72h}{true}{exo}
+\insertexo{jw3r4}{true}{exo}
+\insertexo{1e54x}{true}{exo}
+\insertexo{v4dqz}{true}{exo}
+\insertexo{n86nn}{true}{exo}
+\insertexo{akwq5}{true}{exo}
+\insertexo{sj5q7}{true}{exo}
+\insertexo{gw913}{true}{exo}
+\insertexo{n9d51}{true}{exo}
+\insertexo{nrg23}{true}{exo}
+\insertexo{1kye7}{true}{exo}
 
 \subsection{Identités remarquables}
-\insertexo{xabyp}{true}{exo}{false}
+\insertexo{xabyp}{true}{exo}
 \insertexo{tm6je}{true}{exo}
-\insertexo{3ytn7}{true}{exo}{false}
+\insertexo{3ytn7}{true}{exo}
 \insertexo{guy1v}{true}{exo}
 
 \insertexo{3at1e}{true}{exo}
-\insertexo{akeku}{true}{exo}{false}
+\insertexo{akeku}{true}{exo}
 
 
-\insertexo{sqsur}{true}{exo}{false}
-%\insertexo{qkz3z}{true}{exo}{false}
-\insertexo{6edd2}{true}{exo}{false}
-\insertexo{37srd}{true}{exo}{false}
+\insertexo{sqsur}{true}{exo}
+%\insertexo{qkz3z}{true}{exo}
+\insertexo{6edd2}{true}{exo}
+\insertexo{37srd}{true}{exo}
 \subsection{Factorisation}
-\insertexo{g6h1q}{true}{exo}{false}
-\insertexo{pq3wr}{true}{exo}{false}
-\insertexo{q5m9j}{true}{exo}{false}
-\insertexo{6cmvd}{true}{exo}{false}
+\insertexo{g6h1q}{true}{exo}
+\insertexo{pq3wr}{true}{exo}
+\insertexo{q5m9j}{true}{exo}
+\insertexo{6cmvd}{true}{exo}
 \insertexo{s6f6t}{false}{exo}
-\insertexo{4kec2}{true}{exo}{false}
-\insertexo{z34z9}{true}{exo}{false}
-\insertexo{64mtt}{true}{exo}{false}
-\insertexo{kywsv}{true}{exo}{false}
-\insertexo{nc4wd}{true}{exo}{false}
-\insertexo{ctbb}{true}{exo}{false}
-\insertexo{x9jw}{true}{exo}{false}
-\insertexo{uae9m}{true}{exo}{false}
-\insertexo{64qwf}{true}{exo}{false}
-\insertexo{rwcyq}{true}{exo}{false}
-\insertexo{82fkx}{true}{exo}{false}
+\insertexo{4kec2}{true}{exo}
+\insertexo{z34z9}{true}{exo}
+\insertexo{64mtt}{true}{exo}
+\insertexo{kywsv}{true}{exo}
+\insertexo{nc4wd}{true}{exo}
+\insertexo{ctbb}{true}{exo}
+\insertexo{x9jw}{true}{exo}
+\insertexo{uae9m}{true}{exo}
+\insertexo{64qwf}{true}{exo}
+\insertexo{rwcyq}{true}{exo}
+\insertexo{82fkx}{true}{exo}
 
 \section{Équations}
-\insertexo{5pcp}{true}{exo}{false}
+\insertexo{5pcp}{true}{exo}
 \subsection{Équations du premier degré}
 \subsubsection{Résolution d'équations}
-\insertexo{qa6b}{true}{exo}{false}
-\insertexo{bvvy}{true}{exo}{false}
-\insertexo{rhvj}{true}{exo}{false}
-\insertexo{ehjb}{true}{exo}{false}
+\insertexo{qa6b}{true}{exo}
+\insertexo{bvvy}{true}{exo}
+\insertexo{rhvj}{true}{exo}
+\insertexo{ehjb}{true}{exo}
 \subsubsection{Résolution de problèmes}
-\insertexo{q8vx}{true}{exo}{false}
-\insertexo{prpq}{true}{exo}{false}
-\insertexo{ae7n}{true}{exo}{false}
-\insertexo{fata}{true}{exo}{false}
-\insertexo{abv3}{true}{exo}{false}
-\insertexo{pvqa}{true}{exo}{false}
+\insertexo{q8vx}{true}{exo}
+\insertexo{prpq}{true}{exo}
+\insertexo{ae7n}{true}{exo}
+\insertexo{fata}{true}{exo}
+\insertexo{abv3}{true}{exo}
+\insertexo{pvqa}{true}{exo}
 \newpage
 \section{Réponses}
 \subsection{Calcul numérique}
 
-%\insertexo{6z4t2}{true}{cor}{false}
-%\insertexo{1mcjb}{true}{cor}{false}
+%\insertexo{6z4t2}{true}{cor}
+%\insertexo{1mcjb}{true}{cor}
 %\subsubsection{Nombres premiers}
-%\insertexo{fttde}{true}{cor}{false}
-%\insertexo{b23hy}{true}{cor}{false}
-%\insertexo{11mx3}{true}{cor}{false}
-%\insertexo{4sun4}{true}{cor}{false}
+%\insertexo{fttde}{true}{cor}
+%\insertexo{b23hy}{true}{cor}
+%\insertexo{11mx3}{true}{cor}
+%\insertexo{4sun4}{true}{cor}
 \subsubsection{Division euclidienne}
-\insertexo{t3fxd}{true}{cor}{false}
-\insertexo{wv9bq}{true}{cor}{false}
-\insertexo{cc78t}{true}{cor}{false}
-\insertexo{vrjk9}{true}{cor}{false}
-\insertexo{nwgzm}{true}{cor}{false}
+\insertexo{t3fxd}{true}{cor}
+\insertexo{wv9bq}{true}{cor}
+\insertexo{cc78t}{true}{cor}
+\insertexo{vrjk9}{true}{cor}
+\insertexo{nwgzm}{true}{cor}
 
 \subsubsection{Nombres rationnels}
-\insertexo{vssbc}{true}{cor}{false}
-%\insertexo{jhavr}{true}{cor}{false}
-\insertexo{xgk9e}{true}{cor}{false}
+\insertexo{vssbc}{true}{cor}
+%\insertexo{jhavr}{true}{cor}
+\insertexo{xgk9e}{true}{cor}
 \subsubsection{Racines}
-\insertexo{hv2ug}{true}{cor}{false}
-\insertexo{ksh26}{true}{cor}{false}
-\insertexo{9f4t8}{true}{cor}{false}
-\insertexo{f3sg7}{true}{cor}{false}
-\insertexo{rp8cc}{true}{cor}{false}
+\insertexo{hv2ug}{true}{cor}
+\insertexo{ksh26}{true}{cor}
+\insertexo{9f4t8}{true}{cor}
+\insertexo{f3sg7}{true}{cor}
+\insertexo{rp8cc}{true}{cor}
 \subsection{Ensembles et intervalles}
 \subsubsection{Ensembles de nombres}
-\insertexo{cbh7d}{true}{cor}{false}
-\insertexo{w1wsu}{true}{cor}{false}
-\insertexo{nj317}{true}{cor}{false}
-\insertexo{j1x1v}{true}{cor}{false}
-\insertexo{hggjf}{true}{cor}{false}
-%\insertexo{yrfjs}{true}{cor}{false}
+\insertexo{cbh7d}{true}{cor}
+\insertexo{w1wsu}{true}{cor}
+\insertexo{nj317}{true}{cor}
+\insertexo{j1x1v}{true}{cor}
+\insertexo{hggjf}{true}{cor}
+%\insertexo{yrfjs}{true}{cor}
 \subsubsection{Ensembles quelconques}
-\insertexo{9bnc9}{true}{cor}{false}
-\insertexo{k8f2j}{true}{cor}{false}
-\insertexo{tr635}{true}{cor}{false}
-\insertexo{krq84}{true}{cor}{false}
-\insertexo{ew4z2}{true}{cor}{false}
-\insertexo{rm8qy}{true}{cor}{false}
-\insertexo{zm8w4}{true}{cor}{false}
-\insertexo{s2efz}{true}{cor}{false}
-\insertexo{d5xp3}{true}{cor}{false}
+\insertexo{9bnc9}{true}{cor}
+\insertexo{k8f2j}{true}{cor}
+\insertexo{tr635}{true}{cor}
+\insertexo{krq84}{true}{cor}
+\insertexo{ew4z2}{true}{cor}
+\insertexo{rm8qy}{true}{cor}
+\insertexo{zm8w4}{true}{cor}
+\insertexo{s2efz}{true}{cor}
+\insertexo{d5xp3}{true}{cor}
 \subsubsection{Intervalles réelles}
-\insertexo{6ugwm}{true}{cor}{false}
-\insertexo{v2rv8}{true}{cor}{false}
-\insertexo{p2cxv}{true}{cor}{false}
-\insertexo{p6w7q}{true}{cor}{false}
-\insertexo{czc9e}{true}{cor}{false}
-\insertexo{nw439}{true}{cor}{false}
-\insertexo{61ve6}{true}{cor}{false}
-\insertexo{fq51r}{true}{cor}{false}
-\insertexo{ht3h6}{true}{cor}{false}
-\insertexo{u14s6}{true}{cor}{false}
-\insertexo{9k125}{true}{cor}{false}
-\insertexo{mrvd7}{true}{cor}{false}
-\insertexo{drcdb}{true}{cor}{false}
+\insertexo{6ugwm}{true}{cor}
+\insertexo{v2rv8}{true}{cor}
+\insertexo{p2cxv}{true}{cor}
+\insertexo{p6w7q}{true}{cor}
+\insertexo{czc9e}{true}{cor}
+\insertexo{nw439}{true}{cor}
+\insertexo{61ve6}{true}{cor}
+\insertexo{fq51r}{true}{cor}
+\insertexo{ht3h6}{true}{cor}
+\insertexo{u14s6}{true}{cor}
+\insertexo{9k125}{true}{cor}
+\insertexo{mrvd7}{true}{cor}
+\insertexo{drcdb}{true}{cor}
 \subsection{Calul littéral}
 \subsubsection{Traduire un énoncé}
-\insertexo{3qa3k}{true}{cor}{false}
-\insertexo{a3tr3}{true}{cor}{false}
+\insertexo{3qa3k}{true}{cor}
+\insertexo{a3tr3}{true}{cor}
 \subsubsection{Isoler une variable}
-\insertexo{kdgn}{true}{cor}{false}
-\insertexo{n66ke}{true}{cor}{false}
-\insertexo{2yzxt}{true}{cor}{false}
+\insertexo{kdgn}{true}{cor}
+\insertexo{n66ke}{true}{cor}
+\insertexo{2yzxt}{true}{cor}
 
 \subsubsection{L'algèbre comme outil de preuve}
-\insertexo{sxya4}{true}{cor}{false}
-\insertexo{wanr}{true}{cor}{false}
-\insertexo{jxa81}{true}{cor}{false}
-\insertexo{u38hd}{true}{cor}{false}
-\insertexo{5xg9e}{true}{cor}{false}
-\insertexo{rdpye}{true}{cor}{false}
+\insertexo{sxya4}{true}{cor}
+\insertexo{wanr}{true}{cor}
+\insertexo{jxa81}{true}{cor}
+\insertexo{u38hd}{true}{cor}
+\insertexo{5xg9e}{true}{cor}
+\insertexo{rdpye}{true}{cor}
 \subsubsection{Développer et réduire}
-\insertexo{9e72h}{true}{cor}{false}
-\insertexo{jw3r4}{true}{cor}{false}
-\insertexo{1e54x}{true}{cor}{false}
-\insertexo{v4dqz}{true}{cor}{false}
-\insertexo{n86nn}{true}{cor}{false}
-\insertexo{akwq5}{true}{cor}{false}
-\insertexo{sj5q7}{true}{cor}{false}
-\insertexo{gw913}{true}{cor}{false}
-\insertexo{n9d51}{true}{cor}{false}
-\insertexo{nrg23}{true}{cor}{false}
-\insertexo{1kye7}{true}{cor}{false}
+\insertexo{9e72h}{true}{cor}
+\insertexo{jw3r4}{true}{cor}
+\insertexo{1e54x}{true}{cor}
+\insertexo{v4dqz}{true}{cor}
+\insertexo{n86nn}{true}{cor}
+\insertexo{akwq5}{true}{cor}
+\insertexo{sj5q7}{true}{cor}
+\insertexo{gw913}{true}{cor}
+\insertexo{n9d51}{true}{cor}
+\insertexo{nrg23}{true}{cor}
+\insertexo{1kye7}{true}{cor}
 
 \subsubsection{Identités remarquables}
-\insertexo{xabyp}{true}{cor}{false}
-\insertexo{tm6je}{true}{cor}{false}
-\insertexo{3ytn7}{true}{cor}{false}
-\insertexo{guy1v}{true}{cor}{false}
+\insertexo{xabyp}{true}{cor}
+\insertexo{tm6je}{true}{cor}
+\insertexo{3ytn7}{true}{cor}
+\insertexo{guy1v}{true}{cor}
 
-\insertexo{3at1e}{true}{cor}{false}
-\insertexo{akeku}{true}{cor}{false}
+\insertexo{3at1e}{true}{cor}
+\insertexo{akeku}{true}{cor}
 
 
-\insertexo{sqsur}{true}{cor}{false}
-%\insertexo{qkz3z}{true}{cor}{false}
-\insertexo{6edd2}{true}{cor}{false}
-\insertexo{37srd}{true}{cor}{false}
+\insertexo{sqsur}{true}{cor}
+%\insertexo{qkz3z}{true}{cor}
+\insertexo{6edd2}{true}{cor}
+\insertexo{37srd}{true}{cor}
 \subsubsection{Factorisation}
-\insertexo{g6h1q}{true}{cor}{false}
-\insertexo{pq3wr}{true}{cor}{false}
-\insertexo{q5m9j}{true}{cor}{false}
-\insertexo{6cmvd}{true}{cor}{false}
-\insertexo{s6f6t}{true}{cor}{false}
-\insertexo{4kec2}{true}{cor}{false}
-\insertexo{z34z9}{true}{cor}{false}
-\insertexo{64mtt}{true}{cor}{false}
-\insertexo{kywsv}{true}{cor}{false}
-\insertexo{nc4wd}{true}{cor}{false}
-\insertexo{ctbb}{true}{cor}{false}
-\insertexo{x9jw}{true}{cor}{false}
-\insertexo{uae9m}{true}{cor}{false}
-\insertexo{64qwf}{true}{cor}{false}
-\insertexo{rwcyq}{true}{cor}{false}
-\insertexo{82fkx}{true}{cor}{false}
+\insertexo{g6h1q}{true}{cor}
+\insertexo{pq3wr}{true}{cor}
+\insertexo{q5m9j}{true}{cor}
+\insertexo{6cmvd}{true}{cor}
+\insertexo{s6f6t}{true}{cor}
+\insertexo{4kec2}{true}{cor}
+\insertexo{z34z9}{true}{cor}
+\insertexo{64mtt}{true}{cor}
+\insertexo{kywsv}{true}{cor}
+\insertexo{nc4wd}{true}{cor}
+\insertexo{ctbb}{true}{cor}
+\insertexo{x9jw}{true}{cor}
+\insertexo{uae9m}{true}{cor}
+\insertexo{64qwf}{true}{cor}
+\insertexo{rwcyq}{true}{cor}
+\insertexo{82fkx}{true}{cor}
 
 \subsection{Équations}
-\insertexo{5pcp}{true}{cor}{false}
+\insertexo{5pcp}{true}{cor}
 \subsubsection{Équations du premier degré}
 {\bfseries Résolution d'équations}
-\insertexo{qa6b}{true}{cor}{false}
-\insertexo{bvvy}{true}{cor}{false}
-\insertexo{rhvj}{true}{cor}{false}
-\insertexo{ehjb}{true}{cor}{false}
+\insertexo{qa6b}{true}{cor}
+\insertexo{bvvy}{true}{cor}
+\insertexo{rhvj}{true}{cor}
+\insertexo{ehjb}{true}{cor}
 {\bfseries Résolution de problèmes}
-\insertexo{q8vx}{true}{cor}{false}
-\insertexo{prpq}{true}{cor}{false}
-\insertexo{ae7n}{true}{cor}{false}
-\insertexo{fata}{true}{cor}{false}
-\insertexo{abv3}{true}{cor}{false}
-\insertexo{pvqa}{true}{cor}{false}
+\insertexo{q8vx}{true}{cor}
+\insertexo{prpq}{true}{cor}
+\insertexo{ae7n}{true}{cor}
+\insertexo{fata}{true}{cor}
+\insertexo{abv3}{true}{cor}
+\insertexo{pvqa}{true}{cor}
 
 \end{document}
