--- a/1M/1M-remediationS1.tex
+++ b/1M/1M-remediationS1.tex
@@ -143,105 +143,105 @@ Pour les exercices \ref{factof} à \ref{factol}, factoriser les expression le pl
 \section{Réponses}
 \subsection{Calcul numérique}
 \subsubsection{Généralités}
-\insertexo{6eqb8}{false}{cor}{false}
-\insertexo{cqgt1}{false}{cor}{false}
-\insertexo{dt1xj}{false}{cor}{false}
-\insertexo{gjjjk}{false}{cor}{false}
-\insertexo{yydau}{false}{cor}{false}
+\insertexo{6eqb8}{false}{cor}
+\insertexo{cqgt1}{false}{cor}
+\insertexo{dt1xj}{false}{cor}
+\insertexo{gjjjk}{false}{cor}
+\insertexo{yydau}{false}{cor}
 
 \subsubsection{Fractions}
-\insertexo{41zkh}{false}{cor}{false}
-\insertexo{e9gfb}{false}{cor}{false}
-\insertexo{wvr1j}{false}{cor}{false}
-\insertexo{26f9s}{false}{cor}{false}
-\insertexo{ekwt1}{false}{cor}{false}
-\insertexo{u53gw}{false}{cor}{false}
-\insertexo{1fk3e}{false}{cor}{false}
-\insertexo{wweq4}{false}{cor}{false}
-\insertexo{u3mnh}{false}{cor}{false}
-\insertexo{64nms}{false}{cor}{false}
-\insertexo{uf19k}{false}{cor}{false}
-\insertexo{5216c}{false}{cor}{false}
-\insertexo{1p6gt}{false}{cor}{false}
-\insertexo{9yc6d}{false}{cor}{false}
-\insertexo{fz6a9}{false}{cor}{false}
-\insertexo{9zsqr}{false}{cor}{false}
+\insertexo{41zkh}{false}{cor}
+\insertexo{e9gfb}{false}{cor}
+\insertexo{wvr1j}{false}{cor}
+\insertexo{26f9s}{false}{cor}
+\insertexo{ekwt1}{false}{cor}
+\insertexo{u53gw}{false}{cor}
+\insertexo{1fk3e}{false}{cor}
+\insertexo{wweq4}{false}{cor}
+\insertexo{u3mnh}{false}{cor}
+\insertexo{64nms}{false}{cor}
+\insertexo{uf19k}{false}{cor}
+\insertexo{5216c}{false}{cor}
+\insertexo{1p6gt}{false}{cor}
+\insertexo{9yc6d}{false}{cor}
+\insertexo{fz6a9}{false}{cor}
+\insertexo{9zsqr}{false}{cor}
 
 
 
 \subsubsection{Puissances}
-\insertexo{54yf8}{false}{cor}{false}
-\insertexo{hmpak}{false}{cor}{false}
-\insertexo{v63b9}{false}{cor}{false}
-\insertexo{cd1rb}{false}{cor}{false}
-\insertexo{3yy1z}{false}{cor}{false}
+\insertexo{54yf8}{false}{cor}
+\insertexo{hmpak}{false}{cor}
+\insertexo{v63b9}{false}{cor}
+\insertexo{cd1rb}{false}{cor}
+\insertexo{3yy1z}{false}{cor}
 
 \subsubsection{Racines}
-\insertexo{mvst8}{false}{cor}{false}
-\insertexo{1xhd7}{false}{cor}{false}
-\insertexo{xkmrh}{false}{cor}{false}
-\insertexo{278h8}{false}{cor}{false}
-\insertexo{bc5tw}{false}{cor}{false}
-\insertexo{qqakw}{false}{cor}{false}
-\insertexo{qkedg}{false}{cor}{false}
-\insertexo{gwb3k}{false}{cor}{false}
+\insertexo{mvst8}{false}{cor}
+\insertexo{1xhd7}{false}{cor}
+\insertexo{xkmrh}{false}{cor}
+\insertexo{278h8}{false}{cor}
+\insertexo{bc5tw}{false}{cor}
+\insertexo{qqakw}{false}{cor}
+\insertexo{qkedg}{false}{cor}
+\insertexo{gwb3k}{false}{cor}
 
 
 \subsubsection{Tout mélangé}
-\insertexo{j8a51}{false}{cor}{false}
-\insertexo{9rvm5}{false}{cor}{false}
-\insertexo{2qw6m}{false}{cor}{false}
+\insertexo{j8a51}{false}{cor}
+\insertexo{9rvm5}{false}{cor}
+\insertexo{2qw6m}{false}{cor}
 
 \subsection{Calcul littéral}
 \subsubsection{Généralités}
-\insertexo{9t385}{false}{cor}{false}
-\insertexo{qssda}{false}{cor}{false}
-\insertexo{xvxjz}{false}{cor}{false}
-\insertexo{cbh6a}{false}{cor}{false}
-\insertexo{8j6ba}{false}{cor}{false}
-\insertexo{16gqf}{false}{cor}{false}
-\insertexo{xr5xg}{false}{cor}{false}
-\insertexo{9ppku}{false}{cor}{false}
-\insertexo{ndz6y}{false}{cor}{false}
-\insertexo{tcent}{false}{cor}{false}
+\insertexo{9t385}{false}{cor}
+\insertexo{qssda}{false}{cor}
+\insertexo{xvxjz}{false}{cor}
+\insertexo{cbh6a}{false}{cor}
+\insertexo{8j6ba}{false}{cor}
+\insertexo{16gqf}{false}{cor}
+\insertexo{xr5xg}{false}{cor}
+\insertexo{9ppku}{false}{cor}
+\insertexo{ndz6y}{false}{cor}
+\insertexo{tcent}{false}{cor}
 
-\insertexo{k7fws}{false}{cor}{false}
+\insertexo{k7fws}{false}{cor}
 
-\insertexo{92vqj}{false}{cor}{false}
-\insertexo{v8xjn}{false}{cor}{false}
+\insertexo{92vqj}{false}{cor}
+\insertexo{v8xjn}{false}{cor}
 
 \subsubsection{Identités remarquables}
-\insertexo{bc928}{false}{cor}{false}
-\insertexo{qem25}{false}{cor}{false}
+\insertexo{bc928}{false}{cor}
+\insertexo{qem25}{false}{cor}
 
 
 \subsubsection{Factorisation}
-\insertexo{auwpr}{false}{cor}{false}
-\insertexo{2r2j5}{false}{cor}{false}
-\insertexo{73axm}{false}{cor}{false}
-\insertexo{7apjt}{false}{cor}{false}
-\insertexo{agq9a}{false}{cor}{false}
-\insertexo{j81d8}{false}{cor}{false}
-\insertexo{818gt}{false}{cor}{false}
-\insertexo{52nm3}{false}{cor}{false}
+\insertexo{auwpr}{false}{cor}
+\insertexo{2r2j5}{false}{cor}
+\insertexo{73axm}{false}{cor}
+\insertexo{7apjt}{false}{cor}
+\insertexo{agq9a}{false}{cor}
+\insertexo{j81d8}{false}{cor}
+\insertexo{818gt}{false}{cor}
+\insertexo{52nm3}{false}{cor}
 
 \subsection{Équations}
-\insertexo{eyxew}{false}{cor}{false}
-\insertexo{5zcvh}{false}{cor}{false}
+\insertexo{eyxew}{false}{cor}
+\insertexo{5zcvh}{false}{cor}
 
 \subsubsection{Équations du 1er degré}
-\insertexo{3a497}{false}{cor}{false}
-\insertexo{tbmd8}{false}{cor}{false}
-\insertexo{q11qz}{false}{cor}{false}
+\insertexo{3a497}{false}{cor}
+\insertexo{tbmd8}{false}{cor}
+\insertexo{q11qz}{false}{cor}
 
 
 \subsubsection{Équations du 2e degré}
-\insertexo{d9ypb}{false}{cor}{false}
-\insertexo{rysxa}{false}{cor}{false}
-\insertexo{hzgte}{false}{cor}{false}
-\insertexo{bzvsk}{false}{cor}{false}
-\insertexo{zrqap}{false}{cor}{false}
-\insertexo{czdxs}{false}{cor}{false}
+\insertexo{d9ypb}{false}{cor}
+\insertexo{rysxa}{false}{cor}
+\insertexo{hzgte}{false}{cor}
+\insertexo{bzvsk}{false}{cor}
+\insertexo{zrqap}{false}{cor}
+\insertexo{czdxs}{false}{cor}
 
 
 \end{document}
