--- a/src_exos/9e72h.tex
+++ b/src_exos/9e72h.tex
@@ -10,7 +10,7 @@
 
 \contenu{
 \tcblower
-	Pour chacune des expressions suivantes, préciser (sous : \enquote{Type}) s'il s'agit d'une somme ou d'un produit, et donner le nombre de termes (de cette somme ou de ce produit).
+	Pour chacune des expressions suivantes, préciser (sous : \enquote{Type}) s'il s'agit d'une somme ou d'un produit, et donner le nombre de termes ou de facteurs.
 \begin{center}
 	\begin{tabular}{|>{\stepcounter{rowcount}\alph{rowcount})}ll|l|l|}
     \cline{2-4}
@@ -32,11 +32,11 @@
 \tcblower
 \begin{tasks} (3)
 	\task somme, trois termes
-	\task produit, quatre termes
+	\task produit, quatre facteurs
 	\task somme, deux termes
-	\task produit, trois termes
+	\task produit, trois facteurs
 	\task somme, deux termes
-	\task produit, deux termes
+	\task produit, deux facteurs
 	\task somme, deux termes
 	\task somme, deux termes
 \end{tasks}
